pkginclude_HEADERS = amoeba.h \
	assert.h \
	backProp.h \
	Complex.h \
	dcomplex.h \
	fcomplex.h \
	FileIO.h \
	Histogram.h \
	matlabSupport.h \
	Minc.h \
	MPoint.h \
	MString.h \
	MTypes.h \
	OpTimer.h \
	OrderedCltn.h \
	Path.h \
	Polynomial.h \
	popen.h \
	Spline.h \
	TBSpline.h \
	TrainingSet.h \
	trivials.h
