pkginclude_HEADERS = \
	EBTKS/amoeba.h \
	EBTKS/assert.h \
	EBTKS/backProp.h \
	EBTKS/Complex.h \
	EBTKS/dcomplex.h \
	EBTKS/fcomplex.h \
	EBTKS/FileIO.h \
	EBTKS/Histogram.h \
	EBTKS/matlabSupport.h \
	EBTKS/Minc.h \
	EBTKS/MPoint.h \
	EBTKS/MString.h \
	EBTKS/MTypes.h \
	EBTKS/OpTimer.h \
	EBTKS/OrderedCltn.h \
	EBTKS/Path.h \
	EBTKS/Polynomial.h \
	EBTKS/popen.h \
	EBTKS/Spline.h \
	EBTKS/TBSpline.h \
	EBTKS/TrainingSet.h \
	EBTKS/trivials.h
