AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/templates

noinst_LTLIBRARIES = libAZgen_s.la
libAZgen_s_la_SOURCES = \
        FileIO.cc \
        Histogram.cc \
        MPoint.cc \
        MString.cc \
        OpTimer.cc \
        OrderedCltn.cc \
        Path.cc \
        Polynomial.cc \
        Spline.cc \
        TBSpline.cc \
        TrainingSet.cc \
        amoeba.cc \
        backProp.cc \
        fcomplex.cc \
        dcomplex.cc 
