AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LTLIBRARIES = libAZgen_t.la
libAZgen_t_la_SOURCES = \
        Array.cc \
        CachedArray.cc \
        Dictionary.cc \
        Matrix.cc \
        MatrixSupport.cc \
        Pool.cc \
        SimpleArray.cc \
        ValueMap.cc \
        miscTemplateFunc.cc \
        MatrixConv.cc
