AM_CPPFLAGS = -I$(top_srcdir)/include

pkginclude_HEADERS = \
	Array.h \
	CachedArray.h \
	Dictionary.h \
	Matrix3D.h \
	Matrix.h \
	MatrixSupport.h \
	MatrixTest.h \
	miscTemplateFunc.h \
	Pool.h \
	SimpleArray.h \
	Stack.h \
	ValueMap.h

noinst_LTLIBRARIES = libAZgen_t.la
libAZgen_t_la_SOURCES = \
        Array.cc \
        CachedArray.cc \
        Dictionary.cc \
        Matrix.cc \
        MatrixSupport.cc \
        Pool.cc \
        SimpleArray.cc \
        ValueMap.cc \
        miscTemplateFunc.cc \
        MatrixConv.cc
