AM_CPPFLAGS = -I$(top_srcdir)/include

pkginclude_HEADERS = \
	EBTKS/Array.h \
	EBTKS/CachedArray.h \
	EBTKS/Dictionary.h \
	EBTKS/Matrix3D.h \
	EBTKS/Matrix.h \
	EBTKS/MatrixSupport.h \
	EBTKS/MatrixTest.h \
	EBTKS/miscTemplateFunc.h \
	EBTKS/Pool.h \
	EBTKS/SimpleArray.h \
	EBTKS/Stack.h \
	EBTKS/ValueMap.h

noinst_LTLIBRARIES = libAZgen_t.la
libAZgen_t_la_SOURCES = \
        Array.cc \
        CachedArray.cc \
        Dictionary.cc \
        Matrix.cc \
        MatrixSupport.cc \
        Pool.cc \
        SimpleArray.cc \
        ValueMap.cc \
        miscTemplateFunc.cc \
        MatrixConv.cc
